--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ botocore==1.23.14
 certifi==2018.1.18
 chardet==3.0.4
 cryptography==2.1.4
+Deprecated==1.2.13
 Django==3.1.3
 django-filter==2.4.0
 django-model-utils==4.2.0
@@ -23,6 +24,7 @@ python-dateutil==2.8.2
 python-memcached==1.59
 pytz==2021.3
 pyxdg==0.25
+redis==4.0.2
 requests==2.18.4
 s3transfer==0.5.0
 SecretStorage==2.3.1
